# ConfiguratorTestApp

./: CMakeLists.txt  README.md
src/: app.cpp  app.h  config.cpp  config.h  defines.h  includes.h  main.cpp  redisdefines.h  redissubmanager.cpp  redissubmanager.h  systemtimer.h  thread.cpp  thread.h  version.h
